fixing layout bugs

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,6 +22,7 @@ body {
     padding: 0 1em;
     width: 100vw;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    z-index: 3;
 }
 
 h1 {
@@ -190,6 +191,7 @@ h3 {
     height: 5.75em;
     padding: 1em 2em;
     box-shadow: 0px -4px 4px rgba(0, 0, 0, 0.25);
+    box-sizing: border-box;
 }
 
 .confirm-button {
